--- a/meta/main.yml
+++ b/meta/main.yml
@@ -158,7 +158,7 @@ galaxy_info:
   #  - stretch
   #  - wheezy
 
-  galaxy_tags: []
+  galaxy_tags: 
     mongodb
     install
     # List tags for your role here, one per line. A tag is
