--- a/meta/main.yml
+++ b/meta/main.yml
@@ -158,9 +158,7 @@ galaxy_info:
   #  - stretch
   #  - wheezy
 
-  galaxy_tags: 
-    mongodb
-    install
+  galaxy_tags: []
     # List tags for your role here, one per line. A tag is
     # a keyword that describes and categorizes the role.
     # Users find roles by searching for tags. Be sure to
